Fixed alignment of columns

--- a/src/app/projects/canban-board/canban-board.component.scss
+++ b/src/app/projects/canban-board/canban-board.component.scss
@@ -1,5 +1,5 @@
 .container {
-  max-width: 1100px;
+  swidth: 100%;
   margin-top: 15%;
   margin-bottom: 10%;
 }
@@ -42,13 +42,15 @@ h4 {
 
 .board {
   display: flex;
-  width: 960px;
+  width: 1275px;
   padding-left: 5px;
+  align-items: baseline;
 }
 
 .column {
   flex: 1;
-  width: 350px;
+  max-width: 350px;
+  min-width: 305px;
   padding: 10px;
   margin: 5px;
   border-radius: 5px;
